package bot

import (
	"fmt"
	"time"

	predictionpb "github.com/sports-prediction-contests/shared/proto/prediction"
)

const (
	MsgWelcome = `ğŸ† <b>Sports Prediction Contests</b>

Welcome! Make predictions on sports events and compete with others.

<b>Commands:</b>
/contests - View active contests
/leaderboard - View leaderboard
/mystats - Your statistics
/link - Link your account
/help - Show help

To make predictions, first link your account with /link command.`

	MsgHelp = `ğŸ“– <b>Available Commands</b>

/start - Start bot
/contests - List active contests
/leaderboard [id] - Contest leaderboard
/mystats - Your prediction stats
/link email password - Link Telegram to account
/help - This message

<b>How to use:</b>
1. Register at our website
2. Use /link to connect your account
3. Browse contests and make predictions!`

	MsgNoContests       = "ğŸ“­ No active contests at the moment."
	MsgContestList      = "ğŸ† <b>Active Contests</b>\n\n"
	MsgLeaderboard      = "ğŸ… <b>Leaderboard</b>\n\n"
	MsgEmptyLeaderboard = "No entries in leaderboard yet."
	MsgNotLinked        = "âš ï¸ Account not linked. Use /link email password"
	MsgLinkSuccess      = "âœ… Account linked successfully!"
	MsgLinkFailed       = "âŒ Failed to link account: %s"
	MsgLinkUsage        = "Usage: /link your@email.com password"
	MsgServiceError     = "âš ï¸ Service temporarily unavailable. Try again later."
	MsgUnknownCommand   = "Unknown command. Use /help for available commands."
	MsgStats            = `ğŸ“Š <b>Your Statistics</b>

Total Points: <b>%.1f</b>
Current Streak: <b>%d</b> ğŸ”¥
Max Streak: <b>%d</b>`

	// Match and prediction messages
	MsgMatchList            = "âš½ <b>Matches</b>\n\n"
	MsgNoMatches            = "ğŸ“­ No matches available."
	MsgMatchDetail          = "âš½ <b>Match Details</b>\n\n"
	MsgMatchNotFound        = "âš ï¸ Match not found."
	MsgPredictionSuccess    = "âœ… Prediction saved!"
	MsgPredictionUpdated    = "âœ… Prediction updated!"
	MsgMatchStarted         = "âš ï¸ Match already started, cannot predict."
	MsgSelectScore          = "Select score prediction:"
	MsgOtherPredictions     = "\n\nğŸ‘¥ <b>Other Predictions:</b>\n"
	MsgDetailedLeaderboard  = "ğŸ… <b>Detailed Leaderboard</b>\n\n"
	MsgSelectContestFirst   = "âš ï¸ Please select a contest first."
)

// FormatContest formats a contest entry for display in the contest list.
// Returns a formatted string with emoji, title, sport type, and ID.
func FormatContest(id uint32, title, sportType, status string) string {
	emoji := "ğŸ“‹"
	if status == "active" {
		emoji = "ğŸŸ¢"
	}
	return fmt.Sprintf("%s <b>%s</b>\nSport: %s | ID: %d\n", emoji, title, sportType, id)
}

// FormatLeaderboardEntry formats a single leaderboard entry with rank, name, points, and streak.
// Ranks 1-3 receive medal emojis (ğŸ¥‡ğŸ¥ˆğŸ¥‰), others show numeric rank.
func FormatLeaderboardEntry(rank int, name string, points float64, streak uint32) string {
	medal := ""
	switch rank {
	case 1:
		medal = "ğŸ¥‡"
	case 2:
		medal = "ğŸ¥ˆ"
	case 3:
		medal = "ğŸ¥‰"
	default:
		medal = fmt.Sprintf("%d.", rank)
	}
	streakStr := ""
	if streak > 0 {
		streakStr = fmt.Sprintf(" ğŸ”¥%d", streak)
	}
	return fmt.Sprintf("%s %s - %.1f pts%s\n", medal, name, points, streakStr)
}

// FormatMatch formats match information with prediction status indicator.
// Shows âœ… if user has made a prediction, âšª otherwise.
func FormatMatch(id uint32, homeTeam, awayTeam string, eventDate time.Time, hasPrediction bool) string {
	predIcon := "âšª"
	if hasPrediction {
		predIcon = "âœ…"
	}
	return fmt.Sprintf("%s <b>%s vs %s</b>\nğŸ“… %s\n\n", predIcon, homeTeam, awayTeam, eventDate.Format("Jan 02, 15:04"))
}

// FormatMatchWithPredictions formats match details including other users' predictions.
// Shows match info, final score if completed, and list of other users' predictions.
func FormatMatchWithPredictions(match *predictionpb.Event, predictions []*predictionpb.Prediction) string {
	text := fmt.Sprintf("âš½ <b>%s vs %s</b>\n\nğŸ“… %s\n", match.HomeTeam, match.AwayTeam, match.EventDate.AsTime().Format("Jan 02, 15:04"))
	
	if match.Status == "completed" && match.ResultData != "" {
		text += fmt.Sprintf("ğŸ Final Score: %s\n", match.ResultData)
	}
	
	if len(predictions) > 0 {
		text += MsgOtherPredictions
		for _, pred := range predictions {
			text += fmt.Sprintf("â€¢ User %d: %s\n", pred.UserId, pred.PredictionData)
		}
	}
	
	return text
}

// FormatDetailedLeaderboardEntry formats leaderboard entry with detailed statistics breakdown.
// Shows rank, name, total points, and detailed stats (exact scores, goal diffs, outcomes, team goals).
func FormatDetailedLeaderboardEntry(rank int, name string, points float64, exactScores, goalDiffs, outcomes, teamGoals int) string {
	medal := ""
	switch rank {
	case 1:
		medal = "ğŸ¥‡"
	case 2:
		medal = "ğŸ¥ˆ"
	case 3:
		medal = "ğŸ¥‰"
	default:
		medal = fmt.Sprintf("%d.", rank)
	}
	return fmt.Sprintf("%s %s\nğŸ’¯ %.1f pts | ğŸ¯ %d | âš–ï¸ %d | âœ“ %d | âš½ %d\n\n", 
		medal, name, points, exactScores, goalDiffs, outcomes, teamGoals)
}
